# YouTube-Train-Custom-RF-DETR

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.ipynb
