[project]
name = "youtube-train-custom-rf-detr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "rfdetr>=1.4.0.post0",
    "supervision>=0.27.0",
    "transformers==4.52.2",
]
